# ZManager

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  rustfmt.toml
.github/: FUNDING.yml
.github/instructions/: biome.instructions.md  compoundcomponents.md  react-query.instructions.md  react.instructions.md  rust2024.md  typescript-any.instructions.md  typescript.instructions.md  zod.instructions.md
.github/workflows/: ci.yml
crates/zmanager-core/: Cargo.toml
crates/zmanager-core/src/: config.rs  drives.rs  entry.rs  error.rs  filter.rs  fs.rs  job.rs  lib.rs  navigation.rs  operations.rs  properties.rs  recycle.rs  scheduler.rs  selection.rs  sort.rs  watcher.rs
crates/zmanager-tauri/: Cargo.toml  tauri.conf.json
crates/zmanager-tauri/capabilities/: default.json
crates/zmanager-tauri/gui/: biome.json  package.json  vite.config.ts
crates/zmanager-tauri/gui/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
crates/zmanager-tauri/gui/src/components/: AddressBar.tsx  ConflictDialog.tsx  ContextMenu.tsx  Dialogs.tsx  DndProvider.tsx  FilePane.tsx  Icons.tsx  NewButton.tsx  PropertiesPanel.tsx  ResizablePanes.tsx  Sidebar.tsx  StatusBar.tsx  SvgIcon.tsx  TitleBar.tsx  Toast.tsx  TransferPanel.tsx  VirtualizedFileList.tsx  index.ts
crates/zmanager-tauri/gui/src/hooks/: index.ts  useFileWatcher.ts  useKeyboardShortcuts.ts
crates/zmanager-tauri/gui/src/lib/: tauri.ts
crates/zmanager-tauri/gui/src/stores/: clipboard.store.ts  favorites.store.ts  fileSystem.store.ts  index.ts  ui.store.ts
crates/zmanager-tauri/gui/src/types/: index.ts
crates/zmanager-tauri/gui/src/utils/: iconMappings.ts  index.ts
crates/zmanager-tauri/icons/: icon.icns
crates/zmanager-tauri/src/: commands.rs  lib.rs  main.rs
crates/zmanager-transfer-win/: Cargo.toml
crates/zmanager-transfer-win/src/: clipboard.rs  conflict.rs  copy.rs  executor.rs  folder.rs  job.rs  lib.rs  plan.rs  report.rs
crates/zmanager-transfer-win/tests/: large_file_tests.rs
crates/zmanager-tui/: Cargo.toml
crates/zmanager-tui/src/: app.rs  crash.rs  event.rs  input.rs  lib.rs  main.rs  terminal.rs
crates/zmanager-tui/src/ui/: conflict.rs  dialog.rs  file_list.rs  header.rs  help.rs  layout.rs  mod.rs  properties.rs  sidebar.rs  status_bar.rs  styles.rs  transfers.rs
docs/: Acceptance_Tests.md  GUI_Test.md  GUI_Test2.md  IPC_Contract.md  Keyboard_Shortcuts.md  PRD_ZManager.md  Requirements_Detailed.md  Sprint_Roadmap.md  Task_Breakdown.md
docs/GUI_MockDesign/: mock_part1.html  mock_part2.html  mock_settings.html
