[package]
name = "zmanager-tauri"
description = "Tauri backend for ZManager GUI"
version = "0.1.0"
edition = "2024"
authors = ["ZManager Contributors"]
license = "MIT"
rust-version = "1.85"

[lib]
name = "zmanager_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "zmanager-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
zmanager-core = { path = "../zmanager-core" }
zmanager-transfer-win = { path = "../zmanager-transfer-win" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
open = "5"
chrono = "0.4"
tauri-plugin-drag = "2"
