[package]
name = "zmanager-tui"
description = "Terminal UI for ZManager file manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "zmanager-tui"
path = "src/main.rs"

[dependencies]
zmanager-core = { path = "../zmanager-core" }
zmanager-transfer-win = { path = "../zmanager-transfer-win" }
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"
anyhow.workspace = true
chrono = "0.4"
dirs = "5.0"
